<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bree_serif"
        android:textStyle="bold"
        android:text="@string/meyveYazi"
        android:textColor="@color/yaziRenk1"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/anaRenk"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back_arrow"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:srcCompat="@drawable/menu_icon"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="0dp" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/beslenmeBaslik"

        android:textColor="@color/yaziRenk1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:text="@string/fiyatYazi"
        android:textAllCaps="false"
        android:textColor="@color/anaRenk"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bree_serif"
        android:textStyle="bold"
        android:text="@string/meyveYazi"
        android:textColor="@color/yaziRenk1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="242dp"
        android:layout_height="201dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/pomegranate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/boyutBaslik"
        android:textColor="@color/yaziRenk5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/kabukBaslik"
        android:textColor="@color/yaziRenk5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/sureBaslik"
        android:textColor="@color/yaziRenk5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/boyutYazi"
        android:textColor="@color/yaziRenk1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/kabukYazi"
        android:textColor="@color/yaziRenk1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/sureYazi"
        android:textColor="@color/yaziRenk1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/meyveOzetBaslik"
        android:textColor="@color/yaziRenk1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

 <!-- Besin başlıklarının bulunduğu yazıları yatayda ortalamak için birbirine zincirledim -->
    <TextView
        android:id="@+id/textView13"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/oval_shape"
        android:backgroundTint="@color/yaziRenk4"
        android:gravity="center"
        android:text="@string/karbonhidratBaslik"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk2"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/oval_shape"
        android:backgroundTint="@color/yaziRenk3"
        android:gravity="center"
        android:text="@string/proteinBaslik"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk2"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/oval_shape"
        android:backgroundTint="@color/yaziRenk4"
        android:gravity="center"
        android:text="@string/yagBaslik"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/oval_shape2"
        android:backgroundTint="@color/ozetArkaplan1"
        android:gravity="center"
        android:text="@string/karbonhidratYuzde"
        android:textAlignment="center"
        android:textColor="@color/anaRenk"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/oval_shape2"
        android:backgroundTint="@color/ozetArkaplan2"
        android:gravity="center"
        android:text="@string/proteinYuzde"
        android:textAlignment="center"
        android:textColor="@color/yaziRenk3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="100dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/oval_shape2"
        android:backgroundTint="@color/ozetArkaplan1"
        android:gravity="center"
        android:text="@string/yagYuzde"
        android:textAlignment="center"
        android:textColor="@color/anaRenk"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <!-- Background ve backgroundtint özelliğini aynı anda kullanabilmek için appcompatbutton kullandım -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="370dp"
        android:layout_height="44dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/oval_shape3"
        android:backgroundTint="@color/butonRenk"
        android:text="@string/butonYazi"
        android:textAllCaps="false"
        android:textColor="@color/yaziRenk2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />


</androidx.constraintlayout.widget.ConstraintLayout>